[project]
name = "hello-baamsoo"
version = "0.1.0"
description = "python program"
authors = [
    {name = "baamboo", email = "beom5236@gmail.com"}
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
